--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="about-details">
           <h2 class="section-title">About Us</h2>
           <p class="text">Gardens Produce INC. is a family owned business established in December 2020 in the produce
-            industry, Our mission at Gardens Produce is to provide quality produce and build long lasting relationships
+            industry. Our mission at Gardens Produce is to provide quality produce and build long lasting relationships
             with our
             valued customers. We understand how important quality and outstanding customer service is.
             We deliver to small business, restaurants and catering companies.
@@ -265,7 +265,7 @@
             <img src="images/Coconut.png" alt="Coconut" class="menu-image" />
             <div class="menu-details">
               <h3 class="name">Coconut</h3>
-              <p class="text">Did you know! The healthy fats from Coconut can benefit memory & concentration, helping to
+              <p class="text">Did you know? The healthy fats from Coconut can benefit memory & concentration, helping to
                 prevent diseases such as Alzheimer's.</p>
             </div>
           </li>
@@ -593,7 +593,7 @@
         </div>
 
         <p class="policy-text">
-          <a href="#" class="policy-link">Designed and develope</a>
+          <a href="#" class="policy-link">Designed and developed</a>
           <span class="separator">•</span>
           <a href="#" class="policy-link">by Ludeck</a>
         </p>
